Utilizamos la clase Base64 de apache